# MostolitoRpg

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
docs/: PLAN_REFACTORY.md
docs/architecture/: Arquitectura_Cerebro.md  Arquitectura_ESP32.md  Arquitectura_FreeRTOS_Coordinator.md  Arquitectura_Implementacion.md  Arquitectura_MVP.md  Arquitectura_Repositorio.md  Game_Loop_Architecture_Research.md
docs/auditoria/: AUDITORIA_ARQUITECTURA.md  AUDITORIA_COMBAT.md  AUDITORIA_PET.md  AUDITORIA_RESUMEN.md  AUDITORIA_STORAGE.md
docs/dev/: Investigacion_Librerias.md  ROADMAP.md  Setup_Entorno.md
docs/gameplay/: Estados_Emocionales.md  Generacion_Procedural.md  Interaccion_Usuario.md  Matriz_Sensores.md
docs/hardware/: Especificaciones_Tecnicas.md
docs/milestones/: LIBRARY_RESEARCH.md  MVP_Combat_Basic.md
docs/systems/: DNA_Engine_Criptografico.md  DNA_System.md  Economia_DP_Energia.md  Init_USB_Mode.md  Plan_Skills_Profesiones.md  Sistema_Memoria_Fractal.md  Sistema_Progresion.md  Sistema_Reglas_RPG.md  Sistema_Vida_Muerte.md
docs/ui/: Estilo_Visual_HUD.md  Sprites_LVGL9.md
docs/vision/: Vision_General.md
docs/world/: Ciclo_Vida.md  Lore_Sistema_Mundo.md  Proceso_Genesis.md  Protocolo_Comunicacion.md
firmware/: ARCHITECTURE.md  CMakeLists.txt
firmware/components/mistolito_core/: CMakeLists.txt  animation_loops.c  animation_loops.h  animation_system.c  animation_system.h  combat_engine.c  combat_engine.h  display_task.c  display_task.h  dna_engine.c  dna_engine.h  events.c  events.h  features_engine.c  features_engine.h  game_coordinator.c  game_coordinator.h  idf_component.yml  lcd_init.c  lcd_init.h  mistolito.h  profession_engine.c  profession_engine.h  resources_engine.c  resources_engine.h  rest_engine.c  rest_engine.h  rules.c  rules.h  screens.c  screens.h  skills_perks_engine.c  skills_perks_engine.h  spell_engine.c  spell_engine.h  spi_bus.c  spi_bus.h  sprites.c  sprites.h  storage_task.c  (+5 more)
firmware/data/: game_tables.json  pet_data.json
firmware/main/: main.c  (+1 more)
scripts/: send_init_files.py  setup_sd_card.ps1  start_loop.py  wipe_pet.py
(+215 files in other folders)
